feat: next-fetchx

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 strict-peer-dependencies=true
 auto-install-peers=true
 link-workspace-packages=false
+ignore-workspace-root-check=true
 registry=https://registry.npmjs.org/
