--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-template",
+  "name": "next-fetchx",
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@7.30.0",
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hemengke1997/ts-template.git"
+    "url": "git+https://github.com/hemengke1997/next-fetchx.git"
   },
   "keywords": [
     "TODO"
@@ -37,6 +37,9 @@
     "up": "taze -I -w -r",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "bump": "bumpp packages/*/package.json -c -p -t --all -x \"pnpm run changelog\""
+  },
+  "dependencies": {
+    "@minko-fe/lodash-pro": "0.0.71-beta.5"
   },
   "devDependencies": {
     "@minko-fe/eslint-config": "1.2.32",
