--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "url": "git+https://github.com/hemengke1997/next-fetchx.git"
   },
   "keywords": [
-    "TODO"
+    "nextjs",
+    "fetch",
+    "next-fetchx"
   ],
   "exports": {
     ".": {
@@ -36,7 +38,7 @@
     "lint": "eslint .",
     "up": "taze -I -w -r",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "bump": "bumpp packages/*/package.json -c -p -t --all -x \"pnpm run changelog\""
+    "bump": "bumpp package.json -c -p -t --all -x \"pnpm run changelog\""
   },
   "dependencies": {
     "@minko-fe/lodash-pro": "0.0.71-beta.5"
